# MoMo-Nexus

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/layout/: Header.tsx  Layout.tsx  MobileNav.tsx  Sidebar.tsx  index.ts
dashboard/src/components/ui/: ActivityFeed.tsx  DeviceCard.tsx  DeviceDetailModal.tsx  DeviceMap.tsx  Modal.tsx  Skeleton.tsx  StatCard.tsx  ThemeToggle.tsx  Toast.tsx  index.ts
dashboard/src/hooks/: index.ts  useApi.ts  useKeyboardShortcuts.tsx  useTheme.ts  useWebSocket.ts
dashboard/src/pages/: Analytics.tsx  Captures.tsx  Cracking.tsx  Dashboard.tsx  Fleet.tsx  Phishing.tsx  Placeholder.tsx  Settings.tsx  index.ts
dashboard/src/types/: index.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ECOSYSTEM.md  HARDWARE.md  openapi.json
scripts/: generate_openapi.py
src/nexus/: __init__.py  _version.py  app.py  cli.py  config.py  logging.py
src/nexus/api/: __init__.py  app.py  auth.py  cloud.py  routes.py  sync.py  websocket.py
src/nexus/api/dashboard/: index.html
src/nexus/channels/: __init__.py  base.py  ble.py  cellular.py  lora.py  manager.py  mock.py  wifi.py
src/nexus/cloud/: __init__.py  evilginx.py  hashcat.py  manager.py
src/nexus/core/: __init__.py  events.py  queue.py  router.py
src/nexus/domain/: __init__.py  enums.py  models.py
src/nexus/fleet/: __init__.py  alerts.py  commands.py  manager.py  monitor.py  registry.py
src/nexus/geo/: __init__.py  location.py  manager.py  tracker.py  zones.py
src/nexus/infrastructure/: __init__.py  database.py
src/nexus/notifications/: __init__.py  manager.py  ntfy.py
src/nexus/plugins/: __init__.py  base.py  hooks.py  loader.py  manager.py
src/nexus/security/: __init__.py  crypto.py  envelope.py  hmac.py  manager.py  replay.py
src/nexus/swarm/: __init__.py  bridge.py  manager.py  notifications.py  protocol.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_handshake_workflow.py  test_multi_device_scenario.py
tests/integration/: test_app.py  test_cloud_integration.py  test_routing.py  test_swarm_integration.py  test_sync_integration.py
tests/unit/: test_channel_drivers.py  test_channel_manager.py  test_channels.py  test_cloud.py  test_config.py  test_database.py  test_events.py  test_fleet.py  test_geo.py  test_models.py  test_notifications.py  test_plugins.py  test_queue.py  test_router.py  test_security.py  test_swarm.py  test_sync_api.py
